--- a/frontend/src/Styles/_vars.scss
+++ b/frontend/src/Styles/_vars.scss
@@ -4,3 +4,7 @@ $color-title-md: #444444;
 $color-title-sm: #4b4b4b;
 
 $font-color: #474747;
+
+$input-error-color: #ff0000;
+
+$label-color: #363636;
