--- a/frontend/src/Styles/Components/_form.scss
+++ b/frontend/src/Styles/Components/_form.scss
@@ -2,22 +2,22 @@
   &__container {
     background: #fff;
     position: absolute;
-    max-width: 500px;
+    max-width: 550px;
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
-    padding: 1rem;
+    padding: 1rem 1.5rem;
   }
 
   &__background {
     $white: #ffffff;
-    $grey: #aeefff;
+    $blue: #aeefff;
 
     height: 100vh;
     background: repeating-linear-gradient(
       135deg,
-      $grey,
-      $grey 30%,
+      $blue,
+      $blue 30%,
       $white 30%,
       $white 60%
     );
