--- a/frontend/src/Styles/main.scss
+++ b/frontend/src/Styles/main.scss
@@ -1,8 +1,17 @@
 @import "./vars";
+@import "./fonts";
 @import "./Components/style-imports";
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+p,
+span,
+label,
+input {
+  font-weight: 300;
 }
