--- a/frontend/src/Styles/_vars.scss
+++ b/frontend/src/Styles/_vars.scss
@@ -3,8 +3,11 @@ $color-title-lg: #444444;
 $color-title-md: #444444;
 $color-title-sm: #4b4b4b;
 
-$font-color: #474747;
+$font-color: #000000;
 
 $input-error-color: #ff0000;
 
-$label-color: #363636;
+$label-color: #2c2c2c;
+
+$color-blue: #aeefff;
+$color-blue-dark: #007fd4;
