--- a/frontend/src/Styles/Components/_input.scss
+++ b/frontend/src/Styles/Components/_input.scss
@@ -12,3 +12,22 @@
   font-weight: 400;
   margin: 0.6rem 0 0.8rem 0;
 }
+
+.input--pass-eye {
+  width: 1.5rem;
+  height: 1.5rem;
+  display: block;
+  background: url("../../Icons/eye.svg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: none;
+  cursor: pointer;
+}
+
+.input--pass-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 0.8rem;
+  background-color: #f7f7f7;
+}
