Improved the look of the eye icon on the form

--- a/frontend/src/Styles/Components/_input.scss
+++ b/frontend/src/Styles/Components/_input.scss
@@ -22,6 +22,11 @@
   background-position: center;
   background-repeat: none;
   cursor: pointer;
+
+  &.active {
+    background-color: #33333338;
+    border-radius: 50%;
+  }
 }
 
 .input--pass-container {
