--- a/frontend/src/Styles/Components/_icon.scss
+++ b/frontend/src/Styles/Components/_icon.scss
@@ -1,30 +1,11 @@
 .icon {
   display: inline-block;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 
   &--eye {
     @extend .icon;
     background-image: url("../../Icons/eye.svg");
-  }
-
-  &--cog {
-    @extend .icon;
-    background-image: url("../../Icons/gear.svg");
-  }
-}
-
-.icon--container {
-  display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.45rem;
-
-  &.active {
-    background: rgba(51, 51, 51, 0.185);
-    border-radius: 50%;
   }
 }
