--- a/frontend/src/Styles/Components/_input.scss
+++ b/frontend/src/Styles/Components/_input.scss
@@ -13,19 +13,21 @@
   margin: 0.6rem 0 0.8rem 0;
 }
 
-.input--pass-eye {
-  width: 1.5rem;
-  height: 1.5rem;
-  display: block;
-  background: url("../../Icons/eye.svg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: none;
-  cursor: pointer;
+.input--pass-eye-bg {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.1rem 0.05rem;
+  border-radius: 50%;
 
   &.active {
-    background-color: #33333338;
+    background: #c5c5c5;
     border-radius: 50%;
+  }
+
+  &,
+  &.active {
+    transition: 0.25s;
   }
 }
 
@@ -35,4 +37,10 @@
   align-items: center;
   padding-right: 0.8rem;
   background-color: #f7f7f7;
+
+  .icon--eye {
+    width: 24px;
+    height: 20px;
+    cursor: pointer;
+  }
 }
