--- a/frontend/src/Styles/Components/_nav.scss
+++ b/frontend/src/Styles/Components/_nav.scss
@@ -1,7 +1,14 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 1100px;
   margin: 0 auto;
   padding: 1rem;
+
+  &--text {
+    color: $font-color;
+    font-size: 1.1rem;
+    font-weight: 400;
+  }
 }
