--- a/frontend/src/Styles/Components/_text.scss
+++ b/frontend/src/Styles/Components/_text.scss
@@ -1,5 +1,6 @@
 .text {
-    line-height: 1.5rem;
-    letter-spacing: 0.02rem;
-    color: $font-color;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  letter-spacing: 0.02rem;
+  color: $font-color;
 }
