--- a/frontend/src/Styles/Components/_style-imports.scss
+++ b/frontend/src/Styles/Components/_style-imports.scss
@@ -1,10 +1,9 @@
 @import "button";
-@import "form";
 @import "link";
 @import "text";
 @import "title";
 @import "label";
 @import "input";
 @import "icon";
-@import "nav";
-@import "container";
+@import "./Blocks/blocks-imports";
+@import "./Utils/utils-imports";
