--- a/frontend/src/Styles/Components/_button.scss
+++ b/frontend/src/Styles/Components/_button.scss
@@ -1,9 +1,7 @@
 .btn {
   border: none;
-  background: $color-blue;
   font-size: 1rem;
   padding: 0.8rem 1rem;
-  cursor: pointer;
 }
 
 .floating-btn {
@@ -12,9 +10,7 @@
   align-items: center;
   width: 3rem;
   height: 3rem;
-  background-color: $color-blue;
   border-radius: 50%;
-  cursor: pointer;
 
   // NOTE: br stands for bottom right
   &.br {
@@ -27,6 +23,13 @@
     width: 1.5rem;
     height: 1.5rem;
   }
+}
+
+.btn,
+.floating-btn {
+  background-color: $color-blue;
+  cursor: pointer;
+  outline: none;
 }
 
 @media only screen and (min-width: 1100px) {
