Fixed a bug where the form width would not be consistant

--- a/frontend/src/Styles/Components/Blocks/_form.scss
+++ b/frontend/src/Styles/Components/Blocks/_form.scss
@@ -3,6 +3,7 @@
   &__container {
     background: #fff;
     position: absolute;
+    width: 100%;
     max-width: 550px;
     transform: translate(-50%, -50%);
     top: 50%;
