--- a/frontend/src/Styles/Components/Blocks/_tododialog.scss
+++ b/frontend/src/Styles/Components/Blocks/_tododialog.scss
@@ -1,8 +1,18 @@
 .todo-dialog {
+  max-width: 450px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   background-color: #fff;
   padding: 1rem 2rem;
+
+  .title {
+    margin-bottom: 0.25rem;
+  }
+
+  .label {
+    margin-top: 1rem;
+  }
 
   &--overlay {
     @extend .overlay;
