--- a/frontend/src/Styles/Components/Blocks/_tododialog.scss
+++ b/frontend/src/Styles/Components/Blocks/_tododialog.scss
@@ -14,6 +14,10 @@
     margin-top: 1rem;
   }
 
+  .btn {
+    margin: 1rem 1rem 0 0;
+  }
+
   &--overlay {
     @extend .overlay;
     display: flex;
