--- a/frontend/src/Styles/Components/_button.scss
+++ b/frontend/src/Styles/Components/_button.scss
@@ -1,7 +1,8 @@
 .btn {
+  font-size: 0.85rem;
   border: none;
   font-size: 1rem;
-  padding: 0.8rem 1rem;
+  padding: 0.7rem 0.9rem;
 }
 
 .floating-btn {
