Created the dots icon for todo card

--- a/frontend/src/Styles/Components/_icon.scss
+++ b/frontend/src/Styles/Components/_icon.scss
@@ -24,4 +24,9 @@
     @extend .icon;
     background-image: url("../../Icons/cross.svg");
   }
+
+  &--dots {
+    @extend .icon;
+    background-image: url("../../Icons/dots.svg");
+  }
 }
