Implemented ability to show the context menu when dots clicked

--- a/frontend/src/Styles/Components/Blocks/_todo.scss
+++ b/frontend/src/Styles/Components/Blocks/_todo.scss
@@ -12,9 +12,14 @@
   }
 
   &__context-menu {
+    display: none;
     position: absolute;
     right: 0;
     top: 0;
+
+    &.show {
+      display: block;
+    }
   }
 
   hr {
