Added pencil and trash icons to the todo component

--- a/frontend/src/Styles/Components/_icon.scss
+++ b/frontend/src/Styles/Components/_icon.scss
@@ -29,4 +29,14 @@
     @extend .icon;
     background-image: url("../../Icons/dots.svg");
   }
+
+  &--pencil {
+    @extend .icon;
+    background-image: url("../../Icons/pencil.svg");
+  }
+  
+  &--trash {
+    @extend .icon;
+    background-image: url("../../Icons/trash.svg");
+  }
 }
