--- a/frontend/src/Styles/Components/Blocks/_todo.scss
+++ b/frontend/src/Styles/Components/Blocks/_todo.scss
@@ -9,6 +9,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    .icon--trash {
+      margin-left: 1rem;
+    }
   }
 
   &__context-menu {
