--- a/frontend/src/Styles/Components/Utils/_container.scss
+++ b/frontend/src/Styles/Components/Utils/_container.scss
@@ -16,4 +16,18 @@
       overflow-y: auto;
     }
   }
+
+  &.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &.dark-bg {
+    background-color: #f5f5f5;
+  }
+
+  &.full-height {
+    height: 100%;
+  }
 }
