--- a/frontend/src/Styles/Components/Blocks/_tododialog.scss
+++ b/frontend/src/Styles/Components/Blocks/_tododialog.scss
@@ -23,5 +23,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+
+    &.hide-dialog {
+      display: none;
+    }
   }
 }
