Created the settings page

--- a/frontend/src/Styles/Components/_button.scss
+++ b/frontend/src/Styles/Components/_button.scss
@@ -1,8 +1,11 @@
 .btn {
+  display: inline-block;
   font-size: 0.85rem;
   border: none;
   font-size: 1rem;
   padding: 0.7rem 0.9rem;
+  color: #333;
+  text-decoration: none;
 }
 
 .floating-btn {
