Created the styles for the settings page, not done yet

--- a/frontend/src/Styles/main.scss
+++ b/frontend/src/Styles/main.scss
@@ -1,6 +1,7 @@
 @import "./vars";
 @import "./fonts";
 @import "./Components/style-imports";
+@import "./Pages/page-imports";
 
 #root {
   height: 100vh;
