Finished the frontend implementation
commit e4ee4b4d4dbafbd9d1b045e65fa69851ea2328fd
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Fri Apr 16 18:12:30 2021 +0200

    Finished implementing the settings page

commit d283cca3163c06532f40fd1e3c836a68ccc0c5f5
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Fri Apr 16 17:39:49 2021 +0200

    Created the styles for the settings page, not done yet

commit db6b2f5bdac6686b394b5f50c15455e0faec1aab
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Thu Apr 15 15:31:52 2021 +0200

    Created the settings page

commit 656d07a4e79ab2350366d2b1578ce4db90f3a2c1
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Thu Apr 15 15:11:25 2021 +0200

    Deleted the simple dialog

    This reverts commit 3cb35135fb861cf40c819590357036ad34988323.

commit 3cb35135fb861cf40c819590357036ad34988323
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Wed Apr 14 15:45:43 2021 +0200

    Created the basic dialog

commit 3a2edb9a5907fc3fc03dfa16b7bf35d8b1477dbe
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Mon Apr 12 15:03:18 2021 +0200

    Changed the input types to password for password inputs

commit ecdf9c7ffd69670c6ea0ecadbdba179f0b3fde8a
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Mon Apr 12 14:56:27 2021 +0200

    Implemented the rework for the signup page

commit 9e7d8d8dab2241b3ca31861f35d7a172e279035a
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Mon Apr 12 14:52:44 2021 +0200

    Reworked the login form error message

commit 12b71e59a7b1ae91e5e6c58c964912f6423a583f
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Sat Apr 10 12:47:30 2021 +0200

    Created the background when there are no todos

commit 4ab9d7e9e69b8e8a6b3f48fe0d5ec075e275245d
Author: Jason Azevedo <jasonazevedo03@gmail.com>
Date:   Sat Apr 10 12:30:21 2021 +0200

    Implemented Edit and Delete functionality of todos

commit e2fad45db8afea9bb097cbaff3b91c369bb16256
Author: Jason Azevedo

--- a/frontend/src/Styles/main.scss
+++ b/frontend/src/Styles/main.scss
@@ -1,5 +1,23 @@
+@import "./vars";
+@import "./fonts";
+@import "./Components/style-imports";
+@import "./Pages/page-imports";
+
+#root {
+  height: 100vh;
+  overflow: hidden;
+}
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+}
+
+p,
+span,
+label,
+input {
+  font-weight: 300;
 }
