--- a/frontend/src/Styles/Pages/_settings.scss
+++ b/frontend/src/Styles/Pages/_settings.scss
@@ -6,7 +6,7 @@
   }
 
   .setting-block {
-    margin: 1rem 0;
+    margin: 1rem 0 1.5rem 0;
 
     .text {
       margin: 0.5rem 0;
@@ -15,6 +15,11 @@
     .input {
       margin-top: 1rem;
       min-width: 50%;
+    }
+
+    .input[type="checkbox"] {
+      display: block;
+      margin-right: 0.5rem;
     }
 
     .input,
