--- a/frontend/src/Styles/Components/_text.scss
+++ b/frontend/src/Styles/Components/_text.scss
@@ -6,4 +6,10 @@
   color: $font-color;
   word-break: break-all;
   overflow-wrap: break-word;
+
+  &--error {
+    @extend .text;
+    font-weight: 700;
+    color: $input-error-color;
+  }
 }
