--- a/frontend/src/Styles/Pages/_settings.scss
+++ b/frontend/src/Styles/Pages/_settings.scss
@@ -5,6 +5,10 @@
     justify-content: space-between;
   }
 
+  .error-message {
+    margin: 1rem 0;
+  }
+
   .setting-block {
     margin: 1rem 0 1.5rem 0;
 
